--- a/react-mongodb-api/client/package.json
+++ b/react-mongodb-api/client/package.json
@@ -8,10 +8,12 @@
         "build": "webpack"
     },
     "dependencies": {
+        "immutable": "^3.8.2",
         "react": "^16.5.0",
         "react-dom": "^16.5.0",
-        "immutable": "^3.8.2",
         "react-redux": "^5.0.7",
+        "react-router": "^5.1.2",
+        "react-router-redux": "^4.0.8",
         "redux": "^4.0.0"
     },
     "devDependencies": {
