--- a/1client/package.json
+++ b/1client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-google-charts": "^3.0.15",
     "react-redux": "^5.0.4",
     "react-router": "3.2.0",
     "react-router-redux": "^4.0.8",
