--- a/1client/package.json
+++ b/1client/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-google-charts": "^3.0.15",
