--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.7.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^11.1.0"
+    "validator": "^11.1.0",
+    "zxcvbn": "^4.4.2"
   }
 }
